@@ -1,51 +1,58 @@
 package com.wash.laundry_app.auth;
+
+import com.wash.laundry_app.config.LegacyEndpointInterceptor;
+import com.wash.laundry_app.config.RateLimitInterceptor;
+import lombok.AllArgsConstructor;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
+import org.springframework.web.servlet.config.annotation.InterceptorRegistry;
 import org.springframework.web.servlet.config.annotation.ResourceHandlerRegistry;
 import org.springframework.web.servlet.config.annotation.WebMvcConfigurer;
 
 import java.util.Arrays;
+import java.util.List;
 
 @Configuration
 public class WebConfig implements WebMvcConfigurer {
-    @Value("${webSiteUrl}")
-    private String webSiteUrl;
 
-    // =====================
-    // CORS CONFIG
-    // =====================
+    @Value("${cors.allowed-origins:http://localhost:5173,http://localhost:3000}")
+    private String allowedOrigins;
+
+    private final LegacyEndpointInterceptor legacyEndpointInterceptor;
+    private final RateLimitInterceptor rateLimitInterceptor;
+
+    public WebConfig(LegacyEndpointInterceptor legacyEndpointInterceptor,
+                     RateLimitInterceptor rateLimitInterceptor) {
+        this.legacyEndpointInterceptor = legacyEndpointInterceptor;
+        this.rateLimitInterceptor = rateLimitInterceptor;
+    }
+
+    @Override
+    public void addInterceptors(InterceptorRegistry registry) {
+        registry.addInterceptor(legacyEndpointInterceptor)
+                .addPathPatterns("/admin/**", "/employe/**", "/livreur/**",
+                        "/api/admin/**", "/api/employe/**", "/api/livreur/**");
+        registry.addInterceptor(rateLimitInterceptor);
+    }
+
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        
-        String allowedOrigins = System.getenv("CORS_ALLOWED_ORIGINS");
-        
-        if (allowedOrigins != null && !allowedOrigins.isEmpty()) {
-            config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
-        } else {
-            config.setAllowedOrigins(Arrays.asList(
-                "http://localhost:5173",
-                "http://localhost:3000"
-            ));
-        }
-        
+        config.setAllowedOrigins(Arrays.asList(allowedOrigins.split(",")));
         config.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "PATCH", "OPTIONS"));
-        config.setAllowedHeaders(Arrays.asList("*"));
+        config.setAllowedHeaders(List.of("*"));
         config.setAllowCredentials(true);
         config.setMaxAge(3600L);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", config);
         return source;
     }
 
-    // =====================
-    // RESOURCE HANDLERS
-    // =====================
     @Override
     public void addResourceHandlers(ResourceHandlerRegistry registry) {
         registry.addResourceHandler("/uploads/**")
